--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body {
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,74,9,1) 35%, rgba(0,212,255,1) 100%);
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
   display: grid;
   place-items: center;
   font-family: 'Cormorant Garamond', serif;
@@ -15,8 +14,8 @@ body {
 
 header {
   width: 90%;
-  height: 90vh;
-  margin: auto 0;
+  height: 100%;
+  margin: auto ;
   padding-top: 30px;
   background-image: url(./imagenes/712nSaUJSTL.png);
   background-repeat: no-repeat;
@@ -36,12 +35,11 @@ header h1 {
 .choice {
   width: 100px;
   height: 100px;
-  padding: 0;
-  margin: 0;
   cursor: pointer;
   border-radius: 50%;
   background-color: transparent;
   border: 2px solid black;
+  background-size: contain;
 }
 
 #Piedra {
@@ -74,6 +72,7 @@ button{
   width: 110px;
   border-radius: 5px;
   box-shadow: 0px 5px rgba(0,0,0,0.5);
+  margin-top: 10px;
 }
 
 button:hover {
@@ -86,12 +85,69 @@ button:hover {
   margin-top: 30px;
 }
 
-footer {
-  width: 100%;
-  height: 30px;
+
+.result-box {
+  display: none;
+  position: fixed;
+  margin: 0;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, 10%);
+  width: 300px; 
+  height: 80px; 
+  background-image: url(./imagenes/depositphotos.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+  border: 2px solid black;
 }
 
-footer h3 {
+.result-box p {
   margin: auto;
   padding-top: 10px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  letter-spacing: 6px;
+  font-style: italic;
+  font-size: 35px;
+}
+  
+.create {
+margin-top: 30PX;
+}
+.create P{
+  font-size: 18PX;
+  font-weight: bold;
+}
+
+@media (min-width: 600px) {
+  header {
+    padding-top: 10px;
+    
+  }
+  header h1 {
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 5px;  
+  }
+  .choice {
+    width: 80px;
+    height: 80px;
+    margin-top: 5px;
+  }
+  #scoreboard {
+    margin-top: 0px;
+  }
+  #scoreboard p{
+   margin: 0;
+  }
+  #result {
+    font-size: 18px;
+    margin-top: 5px;
+  }
+  #result p{
+    margin: 0;
+    margin-bottom: 5px;
+  }
+
 }
